--- a/notebooks/1_scoping.ipynb
+++ b/notebooks/1_scoping.ipynb
@@ -2,23 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fa01ae9d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "Unable to import langchain_openai. Please install with `pip install -U langchain-openai`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 36\u001b[39m\n\u001b[32m     28\u001b[39m     is_topic_clarified: \u001b[38;5;28mbool\u001b[39m = Field(\n\u001b[32m     29\u001b[39m         description=\u001b[33m\"\u001b[39m\u001b[33mWhether the user needs to be asked for a clarification on the topic.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     30\u001b[39m     )\n\u001b[32m     31\u001b[39m     question: \u001b[38;5;28mstr\u001b[39m = Field(\n\u001b[32m     32\u001b[39m         description=\u001b[33m\"\u001b[39m\u001b[33mA question to ask the user to clarify the topic research.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     33\u001b[39m     )\n\u001b[32m---> \u001b[39m\u001b[32m36\u001b[39m model = \u001b[43minit_chat_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mgpt-4o-mini\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     38\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34manalyze_research_topic\u001b[39m(state):\n\u001b[32m     40\u001b[39m     structured_output_model = model.with_structured_output(ResearchTopicAnalysis)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Escritorio/Repositorios/MacroEconomicsMultiAgent/macro-economics-multi-agent-system/.venv/lib/python3.12/site-packages/langchain/chat_models/base.py:311\u001b[39m, in \u001b[36minit_chat_model\u001b[39m\u001b[34m(model, model_provider, configurable_fields, config_prefix, **kwargs)\u001b[39m\n\u001b[32m    303\u001b[39m     warnings.warn(\n\u001b[32m    304\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig_prefix\u001b[38;5;132;01m=}\u001b[39;00m\u001b[33m has been set but no fields are configurable. Set \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    305\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m`configurable_fields=(...)` to specify the model params that are \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    306\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mconfigurable.\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    307\u001b[39m         stacklevel=\u001b[32m2\u001b[39m,\n\u001b[32m    308\u001b[39m     )\n\u001b[32m    310\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m configurable_fields:\n\u001b[32m--> \u001b[39m\u001b[32m311\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_init_chat_model_helper\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    312\u001b[39m \u001b[43m        \u001b[49m\u001b[43mcast\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mstr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    313\u001b[39m \u001b[43m        \u001b[49m\u001b[43mmodel_provider\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel_provider\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    314\u001b[39m \u001b[43m        \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    315\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    316\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m model:\n\u001b[32m    317\u001b[39m     kwargs[\u001b[33m\"\u001b[39m\u001b[33mmodel\u001b[39m\u001b[33m\"\u001b[39m] = model\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Escritorio/Repositorios/MacroEconomicsMultiAgent/macro-economics-multi-agent-system/.venv/lib/python3.12/site-packages/langchain/chat_models/base.py:335\u001b[39m, in \u001b[36m_init_chat_model_helper\u001b[39m\u001b[34m(model, model_provider, **kwargs)\u001b[39m\n\u001b[32m    333\u001b[39m model, model_provider = _parse_model(model, model_provider)\n\u001b[32m    334\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m model_provider == \u001b[33m\"\u001b[39m\u001b[33mopenai\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m--> \u001b[39m\u001b[32m335\u001b[39m     \u001b[43m_check_pkg\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mlangchain_openai\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    336\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain_openai\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ChatOpenAI\n\u001b[32m    338\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m ChatOpenAI(model=model, **kwargs)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Escritorio/Repositorios/MacroEconomicsMultiAgent/macro-economics-multi-agent-system/.venv/lib/python3.12/site-packages/langchain/chat_models/base.py:520\u001b[39m, in \u001b[36m_check_pkg\u001b[39m\u001b[34m(pkg, pkg_kebab)\u001b[39m\n\u001b[32m    518\u001b[39m pkg_kebab = pkg_kebab \u001b[38;5;28;01mif\u001b[39;00m pkg_kebab \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m pkg.replace(\u001b[33m\"\u001b[39m\u001b[33m_\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m-\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    519\u001b[39m msg = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnable to import \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpkg\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m. Please install with `pip install -U \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpkg_kebab\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m`\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m520\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n",
-      "\u001b[31mImportError\u001b[39m: Unable to import langchain_openai. Please install with `pip install -U langchain-openai`"
-     ]
+     "data": {
+      "text/plain": [
+       "<langgraph.graph.state.StateGraph at 0x71f082a7f530>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -110,19 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "9f1e0066",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[HumanMessage(content='I want to research the best coffee shops', additional_kwargs={}, response_metadata={}, id='fb9dca6a-ec88-4127-987a-1dbe3b0bd89f'),\n",
-       " AIMessage(content='{\"is_topic_clarified\": true, \"question\": \"What specific criteria are you looking for in the best coffee shops? (e.g., location, ambiance, menu variety, customer reviews, etc.)\"}', additional_kwargs={}, response_metadata={}, id='28535014-58c7-4d0b-a853-ca4bc2c2c08f'),\n",
-       " AIMessage(content='{\"title\": \"What are the best coffee shops in my area based on specific criteria such as location, ambiance, menu variety, and customer reviews, while considering all price ranges unless otherwise specified?\"}', additional_kwargs={}, response_metadata={}, id='8bfc68a2-f9da-42c3-9bee-1b3cbaa02265')]"
+       "[HumanMessage(content='I want to research the best coffee shops', additional_kwargs={}, response_metadata={}, id='941579f3-7675-4eb7-b09b-67f7c990b037'),\n",
+       " AIMessage(content='{\"is_topic_clarified\": true, \"question\": \"What specific criteria are you looking for in the best coffee shops (e.g., location, ambiance, menu variety, customer reviews)?\"}', additional_kwargs={}, response_metadata={}, id='5e1efc26-0500-4f0a-af1f-fa90b1a30439'),\n",
+       " AIMessage(content='{\"title\": \"What are the best coffee shops in my area based on specific criteria such as location, ambiance, menu variety, and customer reviews, while also considering additional factors like price range and specialty offerings?\"}', additional_kwargs={}, response_metadata={}, id='ed8386fc-a3c5-4e66-a0f3-358f16d242f4')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,13 +129,80 @@
     "    {\"messages\": [\n",
     "        HumanMessage(content=\"I want to research the best coffee shops\")\n",
     "    ]}\n",
-    ")\n",
-    "result['messages']"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
+   "id": "afe19017",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">╭─────────────────────────────────────────────────── 🧑 Human ────────────────────────────────────────────────────╮</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> I want to research the best coffee shops                                                                        <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[34m╭─\u001b[0m\u001b[34m──────────────────────────────────────────────────\u001b[0m\u001b[34m 🧑 Human \u001b[0m\u001b[34m───────────────────────────────────────────────────\u001b[0m\u001b[34m─╮\u001b[0m\n",
+       "\u001b[34m│\u001b[0m I want to research the best coffee shops                                                                        \u001b[34m│\u001b[0m\n",
+       "\u001b[34m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╭───────────────────────────────────────────────────── 📝 AI ─────────────────────────────────────────────────────╮</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> {\"is_topic_clarified\": true, \"question\": \"What specific criteria are you looking for in the best coffee shops   <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> (e.g., location, ambiance, menu variety, customer reviews)?\"}                                                   <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[37m╭─\u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m 📝 AI \u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m─╮\u001b[0m\n",
+       "\u001b[37m│\u001b[0m {\"is_topic_clarified\": true, \"question\": \"What specific criteria are you looking for in the best coffee shops   \u001b[37m│\u001b[0m\n",
+       "\u001b[37m│\u001b[0m (e.g., location, ambiance, menu variety, customer reviews)?\"}                                                   \u001b[37m│\u001b[0m\n",
+       "\u001b[37m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╭───────────────────────────────────────────────────── 📝 AI ─────────────────────────────────────────────────────╮</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> {\"title\": \"What are the best coffee shops in my area based on specific criteria such as location, ambiance,     <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> menu variety, and customer reviews, while also considering additional factors like price range and specialty    <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> offerings?\"}                                                                                                    <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[37m╭─\u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m 📝 AI \u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m─╮\u001b[0m\n",
+       "\u001b[37m│\u001b[0m {\"title\": \"What are the best coffee shops in my area based on specific criteria such as location, ambiance,     \u001b[37m│\u001b[0m\n",
+       "\u001b[37m│\u001b[0m menu variety, and customer reviews, while also considering additional factors like price range and specialty    \u001b[37m│\u001b[0m\n",
+       "\u001b[37m│\u001b[0m offerings?\"}                                                                                                    \u001b[37m│\u001b[0m\n",
+       "\u001b[37m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "format_messages(result['messages'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "25926852",
    "metadata": {},
    "outputs": [
@@ -160,7 +223,6 @@
     "from langgraph.checkpoint.memory import InMemorySaver\n",
     "\n",
     "checkpointer = InMemorySaver()\n",
-    "app = graph.compile()#(checkpointer=checkpointer)\n",
     "display(Image(app.get_graph(xray=True).draw_mermaid_png()))"
    ]
   },
