move tools to specific scripts

--- a/notebooks/1_scoping.ipynb
+++ b/notebooks/1_scoping.ipynb
@@ -2,28 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fa01ae9d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x71f082a7f530>"
+       "<langgraph.graph.state.StateGraph at 0x743d499996d0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from langgraph.graph import StateGraph, START, END, MessagesState\n",
-    "from langgraph.graph.message import add_messages\n",
-    "from langchain_core.messages import BaseMessage, HumanMessage, get_buffer_string, AIMessage\n",
+    "from langchain_core.messages import HumanMessage, get_buffer_string, AIMessage\n",
     "from langchain.chat_models import init_chat_model\n",
     "\n",
-    "from typing import TypedDict, Annotated, Sequence\n",
     "from pydantic import BaseModel, Field\n",
     "import json\n",
     "\n",
@@ -31,7 +29,8 @@
     "\n",
     "path.append(\"../src/\")\n",
     "from prompts import clarify_with_user_instructions, transform_messages_into_research_topic_prompt\n",
-    "from utils import get_today_str, format_messages\n",
+    "from utils import format_messages\n",
+    "from tools.others import get_today_str\n",
     "\n",
     "# graph state\n",
     "\n",
@@ -109,20 +108,7 @@
    "execution_count": null,
    "id": "9f1e0066",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[HumanMessage(content='I want to research the best coffee shops', additional_kwargs={}, response_metadata={}, id='941579f3-7675-4eb7-b09b-67f7c990b037'),\n",
-       " AIMessage(content='{\"is_topic_clarified\": true, \"question\": \"What specific criteria are you looking for in the best coffee shops (e.g., location, ambiance, menu variety, customer reviews)?\"}', additional_kwargs={}, response_metadata={}, id='5e1efc26-0500-4f0a-af1f-fa90b1a30439'),\n",
-       " AIMessage(content='{\"title\": \"What are the best coffee shops in my area based on specific criteria such as location, ambiance, menu variety, and customer reviews, while also considering additional factors like price range and specialty offerings?\"}', additional_kwargs={}, response_metadata={}, id='ed8386fc-a3c5-4e66-a0f3-358f16d242f4')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "app = graph.compile()#(checkpointer=checkpointer)\n",
     "result = app.invoke(\n",
@@ -134,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "afe19017",
    "metadata": {},
    "outputs": [
@@ -159,36 +145,15 @@
      "data": {
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╭───────────────────────────────────────────────────── 📝 AI ─────────────────────────────────────────────────────╮</span>\n",
-       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> {\"is_topic_clarified\": true, \"question\": \"What specific criteria are you looking for in the best coffee shops   <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
-       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> (e.g., location, ambiance, menu variety, customer reviews)?\"}                                                   <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> {\"is_topic_clarified\": false, \"question\": \"What specific criteria are you looking for in the best coffee shops? <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> (e.g., location, ambiance, menu variety, customer reviews)\"}                                                    <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
        "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
        "\u001b[37m╭─\u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m 📝 AI \u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m─╮\u001b[0m\n",
-       "\u001b[37m│\u001b[0m {\"is_topic_clarified\": true, \"question\": \"What specific criteria are you looking for in the best coffee shops   \u001b[37m│\u001b[0m\n",
-       "\u001b[37m│\u001b[0m (e.g., location, ambiance, menu variety, customer reviews)?\"}                                                   \u001b[37m│\u001b[0m\n",
-       "\u001b[37m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╭───────────────────────────────────────────────────── 📝 AI ─────────────────────────────────────────────────────╮</span>\n",
-       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> {\"title\": \"What are the best coffee shops in my area based on specific criteria such as location, ambiance,     <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
-       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> menu variety, and customer reviews, while also considering additional factors like price range and specialty    <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
-       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> offerings?\"}                                                                                                    <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
-       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[37m╭─\u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m 📝 AI \u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m─╮\u001b[0m\n",
-       "\u001b[37m│\u001b[0m {\"title\": \"What are the best coffee shops in my area based on specific criteria such as location, ambiance,     \u001b[37m│\u001b[0m\n",
-       "\u001b[37m│\u001b[0m menu variety, and customer reviews, while also considering additional factors like price range and specialty    \u001b[37m│\u001b[0m\n",
-       "\u001b[37m│\u001b[0m offerings?\"}                                                                                                    \u001b[37m│\u001b[0m\n",
+       "\u001b[37m│\u001b[0m {\"is_topic_clarified\": false, \"question\": \"What specific criteria are you looking for in the best coffee shops? \u001b[37m│\u001b[0m\n",
+       "\u001b[37m│\u001b[0m (e.g., location, ambiance, menu variety, customer reviews)\"}                                                    \u001b[37m│\u001b[0m\n",
        "\u001b[37m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
       ]
      },
