--- a/examples/1_scoping.ipynb
+++ b/examples/1_scoping.ipynb
@@ -82,14 +82,14 @@
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╭───────────────────────────────────────────────────── 📝 AI ─────────────────────────────────────────────────────╮</span>\n",
        "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> {\"is_topic_clarified\": false, \"question\": \"What specific criteria are you looking for in the best coffee shops? <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
-       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> For example, are you interested in location, ambiance, menu variety, or customer reviews?\"}                     <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> For example, are you interested in location, ambiance, specialty drinks, or customer reviews?\"}                 <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
        "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
        "\u001b[37m╭─\u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m 📝 AI \u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m─╮\u001b[0m\n",
        "\u001b[37m│\u001b[0m {\"is_topic_clarified\": false, \"question\": \"What specific criteria are you looking for in the best coffee shops? \u001b[37m│\u001b[0m\n",
-       "\u001b[37m│\u001b[0m For example, are you interested in location, ambiance, menu variety, or customer reviews?\"}                     \u001b[37m│\u001b[0m\n",
+       "\u001b[37m│\u001b[0m For example, are you interested in location, ambiance, specialty drinks, or customer reviews?\"}                 \u001b[37m│\u001b[0m\n",
        "\u001b[37m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
       ]
      },
@@ -99,7 +99,7 @@
    ],
    "source": [
     "config = {\"configurable\": {\"thread_id\": \"scoping-session-1\"}}\n",
-    "result = app.invoke(\n",
+    "result = await app.ainvoke(\n",
     "    input={\"messages\": [\n",
     "        HumanMessage(content=\"I want to research the best coffee shops\")\n",
     "    ]},\n",
@@ -136,14 +136,14 @@
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╭───────────────────────────────────────────────────── 📝 AI ─────────────────────────────────────────────────────╮</span>\n",
        "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> {\"is_topic_clarified\": false, \"question\": \"What specific criteria are you looking for in the best coffee shops? <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
-       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> For example, are you interested in location, ambiance, menu variety, or customer reviews?\"}                     <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
+       "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span> For example, are you interested in location, ambiance, specialty drinks, or customer reviews?\"}                 <span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">│</span>\n",
        "<span style=\"color: #c0c0c0; text-decoration-color: #c0c0c0\">╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
        "\u001b[37m╭─\u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m 📝 AI \u001b[0m\u001b[37m────────────────────────────────────────────────────\u001b[0m\u001b[37m─╮\u001b[0m\n",
        "\u001b[37m│\u001b[0m {\"is_topic_clarified\": false, \"question\": \"What specific criteria are you looking for in the best coffee shops? \u001b[37m│\u001b[0m\n",
-       "\u001b[37m│\u001b[0m For example, are you interested in location, ambiance, menu variety, or customer reviews?\"}                     \u001b[37m│\u001b[0m\n",
+       "\u001b[37m│\u001b[0m For example, are you interested in location, ambiance, specialty drinks, or customer reviews?\"}                 \u001b[37m│\u001b[0m\n",
        "\u001b[37m╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n"
       ]
      },
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "result = app.invoke(\n",
+    "result = await app.ainvoke(\n",
     "    {\"messages\": [\n",
     "        HumanMessage(content=\"Coffe shops in San Francisco. The criteria should be the best customer reviews attending to coffe quality\")\n",
     "    ]},\n",
