--- a/examples/3_research_lead_agent.ipynb
+++ b/examples/3_research_lead_agent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9263677c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
     "path.append(\"../src/\")\n",
     "\n",
     "from utils import format_messages\n",
-    "from subagents.research_supervisor import ResearchLeadAgent\n",
+    "from subagents.research_lead_agent import ResearchLeadAgent\n",
     "\n",
     "# compilation config\n",
     "checkpointer = InMemorySaver()\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "658e1b2a",
    "metadata": {},
    "outputs": [
